--- a/css/calendar.black-hawk.css
+++ b/css/calendar.black-hawk.css
@@ -14,7 +14,7 @@
     /* Core Color Palette */
     --hk-bg: #2c3e50;
     /* Dark slate blue */
-    --hk-text: #ecf0f1;
+    --hk-text: #f1f7ed;
     /* Soft cloud white */
     --hk-primary: #3498db;
     /* Vibrant blue */
