--- a/css/calendar.weekend-mindset.css
+++ b/css/calendar.weekend-mindset.css
@@ -17,9 +17,9 @@
 
 :root {
     /* Blue Racing Color Palette */
-    --f1-bg: #0c0cec;
+    --f1-bg: #0aff16;
     --f1-text: #F0F0FF;
-    --f1-primary: #ff2f00;
+    --f1-primary: #f20b0b;
     /* Renault/McLaren blue */
     --f1-secondary: #ffd500;
     /* Cyan accent */
@@ -29,13 +29,13 @@
     --f1-gradient-end: #001A0A;
 
     /* Accent Colors */
-    --f1-red: #FF1801;
+    --f1-red: #23ff01;
     /* Ferrari red */
     --f1-yellow: #FFD700;
     /* Safety car */
-    --f1-green: #00A651;
+    --f1-green: #a69500;
     /* Racing green */
-    --f1-orange: #FF7B08;
+    --f1-orange: #ff08f3;
     /* McLaren orange */
     --f1-silver: #C0C0C0;
     /* Metallic */
