--- a/css/calendar.weekend-mindset.css
+++ b/css/calendar.weekend-mindset.css
@@ -17,7 +17,7 @@
 
 :root {
     /* Blue Racing Color Palette */
-    --f1-bg: #0aff16;
+    --f1-bg: #0ddba7;
     --f1-text: #F0F0FF;
     --f1-primary: #f20b0b;
     /* Renault/McLaren blue */
